[package]
name = "kueue-dev"
version = "0.5.12"
edition = "2024"
authors = ["Kueue Contributors"]
description = "Development CLI tool for kueue-operator"
license = "Apache-2.0"
publish = false

[[bin]]
name = "kueue-dev"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal UI
colored = "3"
indicatif = "0.18"
dialoguer = "0.12"
owo-colors = "4.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Utilities
which = "8.0"
tempfile = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
